--- a/docs/基础/排序/05_归并.md
+++ b/docs/基础/排序/05_归并.md
@@ -4,7 +4,7 @@
 
 
 
-### 递归：自顶向下
+### 🚀递归：自顶向下
 
 ```
 [5,1,1,2,0,0]
@@ -12,42 +12,46 @@
 [5,1] [1] [2,0] [0]
 [5] [1] [1] [2] [0] [0]
 ```
-额外数组公用
+🚀额外数组公用
 
 ```java
-public int[] sortArray(int[] nums) {
-    int[] t_arr = new int[nums.length];
-    mergeSort(nums, 0, nums.length - 1, t_arr);
-    return nums;
-}
-
-public void mergeSort(int[] nums, int i, int j, int[] t_arr){
-    if(i >= j){		// 当子数组长度为 1 时终止递归
-        return;
+class Solution {
+    public int[] sortArray(int[] nums) {
+        int[] t = new int[nums.length];
+        mergeSort(nums, 0, nums.length - 1, t);
+        return nums;
     }
-    int mid = (i + j) >>> 1;
-    mergeSort(nums, i, mid, t_arr);					// 分
-    mergeSort(nums, mid + 1, j, t_arr);
-    merge(nums, i, mid, mid+1, j, t_arr);			// 并：结果存到临时数组里
 
-    // 将临时数组里的结果拷回原数组
-    System.arraycopy(t_arr, i, nums, i, j - i + 1);
-}
-
-public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
-    int k = iLeft;  // 0在递归中可以，但为了和非递归保持一致。
-    while (iLeft <= iRight && jLeft <= jRight) {
-        if (nums[iLeft] < nums[jLeft]) {
-            t_arr[k++] = nums[iLeft++];
-        } else {
-            t_arr[k++] = nums[jLeft++];
+    public void mergeSort(int[] nums, int i, int j, int[] t) {
+        if (i == j) {   // 当子数组长度为 1 时终止递归
+            return;
         }
+        int m = i + j >>> 1;
+        // 一直递归到单个
+        mergeSort(nums, i, m, t);
+        mergeSort(nums, m + 1, j, t);
+        // 再从底向上合并
+        merge(nums, i, m, m + 1, j, t);
+        System.arraycopy(t, i, nums, i, j - i + 1);
     }
-    // 将左子数组和右子数组的剩余元素复制到临时数组中
-    if (iLeft <= iRight) {
-        System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
-    } else {
-        System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
+
+    public void merge(int[] nums, int mi, int mj, int ni, int nj, int[] t) {
+        int k = mi;
+        while (mi <= mj && ni <= nj) {
+            if (nums[mi] < nums[ni]) {
+                t[k] = nums[mi];
+                mi++;
+            } else {
+                t[k] = nums[ni];
+                ni++;
+            }
+            k++;
+        }
+        if (mi <= mj) {
+            System.arraycopy(nums, mi, t, k, mj - mi + 1);
+        } else {
+            System.arraycopy(nums, ni, t, k, nj - ni + 1);
+        }
     }
 }
 ```
@@ -132,22 +136,22 @@ public void split(int[] nums, int[] t_arr) {
     }
 }
 
-public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
-    int k = iLeft;
-    while (iLeft <= iRight && jLeft <= jRight) {
-        if (nums[iLeft] < nums[jLeft]) {
-            t_arr[k] = nums[iLeft];
-            iLeft++;
+public void merge(int[] nums, int mLeft, int mRight, int nLeft, int nRight, int[] t_arr) {
+    int k = mLeft;
+    while (mLeft <= mRight && nLeft <= nRight) {
+        if (nums[mLeft] < nums[nLeft]) {
+            t_arr[k] = nums[mLeft];
+            mLeft++;
         } else {
-            t_arr[k] = nums[jLeft];
-            jLeft++;
+            t_arr[k] = nums[nLeft];
+            nLeft++;
         }
         k++;
     }
-    if (iLeft <= iRight) {
-        System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
+    if (mLeft <= mRight) {
+        System.arraycopy(nums, mLeft, t_arr, k, mRight - mLeft + 1);
     } else {
-        System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
+        System.arraycopy(nums, nLeft, t_arr, k, nRight - nLeft + 1);
     }
 }
 ```
@@ -196,22 +200,22 @@ class Solution {
         System.arraycopy(t_arr, left, nums, left, right - left + 1);
     }
 
-    public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
-        int k = iLeft;
-        while (iLeft <= iRight && jLeft <= jRight) {
-            if (nums[iLeft] < nums[jLeft]) {
-                t_arr[k] = nums[iLeft];
-                iLeft++;
+    public void merge(int[] nums, int mLeft, int mRight, int nLeft, int nRight, int[] t_arr) {
+        int k = mLeft;
+        while (mLeft <= mRight && nLeft <= nRight) {
+            if (nums[mLeft] < nums[nLeft]) {
+                t_arr[k] = nums[mLeft];
+                mLeft++;
             } else {
-                t_arr[k] = nums[jLeft];
-                jLeft++;
+                t_arr[k] = nums[nLeft];
+                nLeft++;
             }
             k++;
         }
-        if (iLeft <= iRight) {
-            System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
+        if (mLeft <= mRight) {
+            System.arraycopy(nums, mLeft, t_arr, k, mRight - mLeft + 1);
         } else {
-            System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
+            System.arraycopy(nums, nLeft, t_arr, k, nRight - nLeft + 1);
         }
     }
 
