--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -41,13 +41,13 @@ private void swap(int[] nums, int i, int j){
 
 
 
-快速：两个哨兵，哨兵不排，哨兵左右递归
+快速：根据哨兵排序 partition，再自身递归左右子区间。
 
 ​	（1）一个partition工具函数来获得哨兵和排序，一个quickSort递归函数。
 
-​	（2）quickSort 只有一个元素 i>=j 就退出，partion 的while循环 i < j 起码两个元素
+​	（2）quickSort p不参与下一次递归 `[i, p-1], [p+1, j]`，quickSort 只剩一个元素 i>=j 就退出，
 
-​	（3）quickSort p不参与下一次递归，[i, p-1], [p+1, j]
+​	（3）partion 的while循环 i < j 起码两个元素
 
 ​	（4）partition 先找到j给nums[i]，再找到 i 给 nums[j]。最后 i == j，赋值谁都行。
 
