--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -69,12 +69,14 @@ return sentinel.next;
 
 ### 🚀合并链表
 
+注意 cur，老是忘了，结果直接用dummy找不到头。
+
 ```java
 // 21. 合并两个有序链表
 class Solution {
     public ListNode mergeTwoLists(ListNode list1, ListNode list2) {
         ListNode dummy = new ListNode(0);
-        ListNode cur = dummy;
+        ListNode cur = dummy;	// 一定是 cur
         while (list1 != null && list2 != null) {
             if (list1.val <= list2.val) {
                 cur.next = list1;
@@ -94,6 +96,10 @@ class Solution {
     }
 }
 ```
+
+ [21. 合并两个有序链表.md](..\..\题\leetcode\21. 合并两个有序链表.md)  
+
+[23. 合并 K 个升序链表.md](..\..\题\leetcode\23. 合并 K 个升序链表.md) 
 
 ### 🚀链表的中间结点
 
@@ -115,6 +121,30 @@ class Solution {
     }
 }
 ```
+
+如果想返回中间和中间偏左，那么造一个dummy，中间→中间偏左，中间偏右→中间。
+
+```java
+class Solution {
+    public ListNode middleNode(ListNode head) {
+        // 防止空时，返回dummy
+        if(head == null){
+            return null;
+        }
+        
+        ListNode dummy = new ListNode(0, head);
+        ListNode slow = dummy;
+        ListNode fast = dummy;
+        while(fast != null && fast.next != null){
+            slow = slow.next;
+            fast = fast.next.next;
+        }
+        return slow;
+    }
+}
+```
+
+
 
 ### 🚀反转链表
 
@@ -143,10 +173,22 @@ class Solution {
 
 ## 其他
 
-[160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
+ [彩虹链表.md](..\..\题\笔试\彩虹链表.md) ：中间节点 + 反转列表 + 融合列表（变为交替）
 
 
 
-删除重复元素
+删除元素 
 
-​	 [83. 删除排序链表中的重复元素.md](..\..\题\leetcode\83. 删除排序链表中的重复元素.md) 
+​	[19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针，删除要sentinel，找倒 n+1
+
+​	[83. 删除排序链表中的重复元素.md](..\..\题\leetcode\83. 删除排序链表中的重复元素.md)  ：（1）cur cur.next （2）pre cur
+
+​	[82. 删除排序链表中的重复元素 II.md](..\..\题\leetcode\82. 删除排序链表中的重复元素 II.md) ：pre cur cur.next
+
+相交
+
+[	160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
+
+环
+
+​	 [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) 
