--- a/docs/基础/链表/链表2.md
+++ b/docs/基础/链表/链表2.md
@@ -43,16 +43,16 @@ class ListNode {
 ## 快慢指针
 
 走多：`fast=fast.next`
-1. [获取倒n.md](leetcode\获取倒n.md) 
+1. [获取倒n.md](../../../src/main/java/com/itheima/datastructure/linkedlist---/leetcode/获取倒n.md) 
    
    从哨兵开始还是从head开始都一样，因为拉开差距的是for，用了哨兵只是多走一次while.
-2. [删除倒n](leetcode/19删除倒n.md)
+2. [删除倒n](../../../src/main/java/com/itheima/datastructure/linkedlist---/leetcode/19删除倒n.md)
    
    那么就要获取前一个节点，实际是找倒n + 1，以及需要哨兵。
 
 
 走快：`fast=fast.next.next`
-1. [获取中间](leetcode/876链表的中间结点.md)：
+1. [获取中间](../../../src/main/java/com/itheima/datastructure/linkedlist---/leetcode/876链表的中间结点.md)：
    
    倒数第一及后，`fast != null && fast.next != null`；倒数第二及后，`fast.next != null && fast.next.next != null`
 
@@ -73,7 +73,7 @@ class ListNode {
 
 ### 模板题
 
-🚀 [获取倒n.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\获取倒n.md) ：快慢指针
+🚀 [获取倒n.md](../../../src/main/java/com/src/main/java/com/itheima/datastructure/linkedlist/leetcode/获取倒n.md) ：快慢指针
 
   [19. 删除链表的倒数第 N 个结点.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针找倒 n + 1
 
