--- a/docs/题/leetcode/1206. 设计跳表.md
+++ b/docs/题/leetcode/1206. 设计跳表.md
@@ -1,4 +1,4 @@
-![alt text](../../../../../../../images/image-82.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409291653884.png)
 ```java
 // 1206. 设计跳表
 class Skiplist {
