--- a/docs/题/leetcode/160. 相交链表.md
+++ b/docs/题/leetcode/160. 相交链表.md
@@ -28,3 +28,68 @@ public class Solution {
 }
 ```
 
+---
+
+## 🚀长度补齐
+
+O(m+n), O(1)
+```java
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        if (headA == null || headB == null) {
+            return null;
+        }
+        ListNode pA = headA, pB = headB;
+        while (pA != pB) {
+            pA = pA == null ? headB : pA.next;
+            pB = pB == null ? headA : pB.next;
+        }
+        return pA;
+    }
+}
+```
+遍历两次，那么长度就被对齐了。同步移动的指针位置处就是相交的结点或null
+- 相交的结点
+- null：两个链表不相交，长度一样还是不一样，都会两指针同时指向null，null==null为true退出。
+## 转化为环
+
+```java
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        if (headA == null || headB == null) {
+            return null;
+        }
+        ListNode head = headA;
+        while(head.next!=null){
+            head = head.next;
+        }
+        head.next = headB;
+        ListNode flag = detectCycle(headA);
+        head.next = null;
+        return flag;
+    }
+
+    public ListNode detectCycle(ListNode head) {
+        ListNode slow = head, fast = head;
+        while(fast!=null && fast.next != null){
+            fast = fast.next.next;
+            slow = slow.next;
+            if(fast == slow){
+                break;
+            }
+        }
+        // fast和slow未相遇：根据fast
+        if(fast ==null || fast.next == null){
+            return null;
+        }
+        while(head != slow){
+            head = head.next;
+            slow = slow.next;
+            if(head == slow){
+                break;
+            }
+        }
+        return slow;
+    }
+}
+```
