--- a/docs/题/leetcode/19. 删除链表的倒数第 N 个结点.md
+++ b/docs/题/leetcode/19. 删除链表的倒数第 N 个结点.md
@@ -1,8 +1,10 @@
 
 ## 快慢指针
-- 因为要删除，所以考虑头结点情况，引入哨兵。
-- 快慢指针都从哨兵开始
-- 因为删除要找前一个位置，所以找倒 n + 1，则for迭代n+1
+因为要删除，**引入哨兵**。快慢指针都从哨兵开始
+
+找的不是倒n，而是**倒 n+1**。因为删除要找前一个位置， for 迭代 n+1次
+
+![image-20240929221010650](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409292210694.png)
 
 ```java
 class Solution {
