--- a/docs/题/leetcode/83. 删除排序链表中的重复元素.md
+++ b/docs/题/leetcode/83. 删除排序链表中的重复元素.md
@@ -1,3 +1,9 @@
+![image-20240929232046431](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409292320491.png)
+
+## 🚀cur cur.next 往后比较
+
+不用哨兵，因为不会删除第一个元素。
+
 ```java
 // 83. 删除排序链表中的重复元素
 class Solution {
@@ -9,6 +15,7 @@ class Solution {
         while(cur != null && cur.next != null){
             if(cur.val == cur.next.val){
                 cur.next = cur.next.next;
+                // 这里cur不动，是因为可能下一个节点还可能和当前节点重复
             }
             else{
                 cur = cur.next;
@@ -19,3 +26,107 @@ class Solution {
 }
 ```
 
+## 🚀pre cur
+
+- 哨兵：为了和83题保持一致。
+
+- pre 从sentinel开始，cur从head开始。遍历让cur指向不重复的节点，pre.next = cur。
+
+```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+        ListNode sentinel = new ListNode(-1, head);
+        ListNode pre = sentinel;
+        ListNode cur = head;
+        while(cur != null){
+            if(pre.val == cur.val && pre!= sentinel){
+                cur = cur.next;
+                pre.next = cur;
+            }else{
+                cur = cur.next;
+                pre = pre.next;
+            }
+        }
+        return sentinel.next;
+    }
+}
+```
+
+参考AQS的小优化：让pre直接指向不重复的元素，跳过cur和cur.next重复的情况。
+
+```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+        ListNode sentinal = new ListNode(-1, head);
+        ListNode pre = sentinal;
+        ListNode cur = head;
+        while (cur != null) {
+            if (pre.val == cur.val && pre != sentinal) {
+                for (;;) {
+                    cur = cur.next;
+                    if (cur == null || pre.val != cur.val) {
+                        pre.next = cur;
+                        break;
+                    }
+                }
+            } else {
+                cur = cur.next;
+                pre = pre.next;
+            }
+        }
+        return sentinal.next;
+    }
+}
+```
+## 递归
+
+```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        ListNode sentinel = new ListNode(-1011, head);
+        f(sentinel);
+        return sentinel.next;
+    }
+
+    public ListNode f(ListNode head){
+        if(head == null || head.next == null){
+            return head;
+        }
+
+        ListNode last = f(head.next);
+        if(last.val == head.val){
+            head.next = last.next;
+            return head;
+        }else{
+            head.next = last;
+            return head;
+        }
+    }
+}
+```
+
+返回从当前head结点开始的，完成重复的链表
+- head与head.next重复，则返回下一次递归。
+- 不重复，则head指向下次递归，并返回head。
+```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+
+        if(head.val == head.next.val){
+            return deleteDuplicates(head.next);
+        }else{
+            head.next = deleteDuplicates(head.next);
+            return head;
+        }
+    }
+}
+```
