--- a/docs/题/笔试/彩虹链表.md
+++ b/docs/题/笔试/彩虹链表.md
@@ -1,2 +1,93 @@
 ![image-20240928201417264](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282014334.png)
 
+思路：中间节点 + 反转列表 + 融合列表
+
+![image-20240929144251056](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409291442102.png)
+
+```java
+public class Main{
+    public static void main(String[] args) throws InterruptedException {
+        ListNode head = new ListNode(1, new ListNode(2, new ListNode(3, new ListNode(4))));
+        Solution s = new Solution();
+        ListNode h = s.rainbowList(head);
+        while(h != null){
+            System.out.println(h.val);
+            h = h.next;
+        }
+    }
+
+    static class ListNode {
+        int val;
+        ListNode next;
+
+        ListNode() {
+        }
+
+        ListNode(int val) {
+            this.val = val;
+        }
+
+        ListNode(int val, ListNode next) {
+            this.val = val;
+            this.next = next;
+        }
+    }
+    static class Solution {
+        public ListNode rainbowList(ListNode head){
+            ListNode middle = middleList(head);
+            ListNode reversed = reverseList(middle.next);
+            middle.next = null;
+            return mergeTwoLists(head, reversed);
+        }
+
+        public ListNode middleList(ListNode head){
+            ListNode slow = head;
+            ListNode fast = head;
+            while(fast != null && fast.next != null){
+                slow = slow.next;
+                fast = fast.next.next;
+            }
+            return slow;
+        }
+
+        public ListNode mergeTwoLists(ListNode list1, ListNode list2) {
+            ListNode dummy = new ListNode(0);
+            ListNode cur = dummy;
+            int i = 1;
+            while(list1 != null && list2 != null){
+                if(i % 2 == 1){
+                    cur.next = list1;
+                    list1 = list1.next;
+                }
+                else{
+                    cur.next = list2;
+                    list2 = list2.next;
+                }
+                cur = cur.next;
+                i++;
+            }
+            if(list1 != null){
+                cur.next = list1;
+            }
+            else{
+                cur.next = list2;
+            }
+            return dummy.next;
+        }
+        public ListNode reverseList(ListNode head) {
+            if(head == null){
+                return head;
+            }
+
+            if(head.next == null){
+                return head;
+            }
+            System.out.println(head.val);
+            ListNode h = reverseList(head.next);
+            head.next.next = head;
+            return h;
+        }
+    }
+}
+```
+
