--- a/docs/题/leetcode/141. 环形链表.md
+++ b/docs/题/leetcode/141. 环形链表.md
@@ -1,7 +1,3 @@
-1. 快慢指针
-2. 哈希表：O(n),O(n)
-3. 暴力修改遍历过的值为val范围外，检测val是否合理就是有无遍历过的
-
 ## 快慢指针
 中间指针和尾部指针的追击，注意判断追击的条件写在下面。
 ```java
@@ -11,7 +7,7 @@ public class Solution {
         while(fast != null && fast.next != null){
             fast = fast.next.next;
             slow = slow.next;
-            // 一定要写下面，否则head==head
+            // 一定要写在下面，否则head==head
             if(slow == fast){
                 return true;
             }
@@ -20,3 +16,8 @@ public class Solution {
     }
 }
 ```
+
+## other
+
+1. 哈希表：O(n),O(n)
+2. 暴力修改遍历过的值为val范围外，检测val是否合理就是有无遍历过的
