--- a/docs/基础/动态规划/背包问题.md
+++ b/docs/基础/动态规划/背包问题.md
@@ -7,13 +7,18 @@
 
 > 0-1背包：整个物品。上一行
 
-> 完全背包：无限物品。本行
+> 完全背包：整个 + 无限物品。本行
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231645317.png)
 
 ## 分数背包（贪心）
-- 按照单价逆序。
-- 遍历装入背包，判断拿完和拿不完。拿完就装入，减小容量；拿不完，就装入部分，把剩余空间填满。
+按照单价逆序。
+
+遍历装入背包，判断拿完和拿不完。	
+
+​	拿完就装入，减小容量；
+
+​	拿不完，就装入部分，把剩余空间填满。
 
 ```java
 /* 物品 */
@@ -153,7 +158,9 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 
 递推公式 （判断和公式中的w和v是i-1）
 
-$dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i-1]\\ \max(dp[i-1][c], dp[i-1][c - w[i-1]] + v[i-1]), & \text{if } c \geq w[i-1] \end{cases}$
+$$
+dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i-1]\\ \max(dp[i-1][c], dp[i-1][c - w[i-1]] + v[i-1]), & \text{if } c \geq w[i-1] \end{cases}
+$$
 
 
 
@@ -164,11 +171,11 @@ $dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i-1]\\ \max(dp[i-1][c
 ​	背包必须包含0和n，0表示没装东西，n表示最大容量。
 
 ```java
-/* w和v都还是n个，不用特意变成n+1个 */
-public int pack01(int[] w, int[] v, int n, int cap) {
-    int[][] dp = new int[n+1][cap + 1];
-    // 从第1个物品开始，包括n
-    for (int i = 1; i <= n; i++) {
+public int pack01(int[] w, int[] v, int cap) {
+    int n = w.length;
+    int[][] dp = new int[n + 1][cap + 1];	// n + 1个物品，cap+1个容量【dp的范围是背包的最大容量】
+    // 【两个循环：一个遍历物品，一个遍历背包大小】
+    for (int i = 1; i <= n; i++) {		// 从第1个物品开始，包括n
         for (int c = 1; c <= cap; c++) {
             if (c >= w[i-1]) {
                 // 装的下：不选和选物品 i 这两种方案的较大值
@@ -185,11 +192,9 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 /* 0-1 背包：空间优化后的动态规划 */
 public int pack01(int[] w, int[] v, int n, int cap) {
     int[] dp = new int[cap + 1];		// dp的范围是背包的最大容量
-    // i: 1-n 是物品的遍历
+    // 【两个循环：一个遍历物品，一个【倒序】遍历背包大小】
     for (int i = 1; i <= n; i++) {
-        // c：dp数组的遍历
-     	// w 和 v 都是物品i, w[i-1], v[i-1]
-        for (int c = cap; c >= w[i-1]; c--) {		// 把if判断融合进去
+        for (int c = cap; c >= w[i-1]; c--) {		// 把if判断融合进去：背白装不下的，就不变
             dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
         }
     }
@@ -299,7 +304,6 @@ $$
 
 
 ```java
-/* 完全背包：动态规划 */
 public long packInfinity(int[] w, int[] v, int n, int cap) {
     long[][] dp = new long[n + 1][cap + 1];
     for (int i = 1; i <= n; i++) {
@@ -315,9 +319,9 @@ public long packInfinity(int[] w, int[] v, int n, int cap) {
     return dp[n][cap];
 }
 
-/* 完全背包：动态规划 */
 public long packInfinity(int[] w, int[] v, int n, int cap) {
     long[] dp = new long[cap + 1];
+    // 【正序】遍历背包
     for (int i = 1; i <= n; i++) {
         for (int c = w[i-1]; c <= cap; c++) {		// 把if判断的小于则保持不变，融合进去
             dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
