--- a/docs/基础/排序/01_冒泡.md
+++ b/docs/基础/排序/01_冒泡.md
@@ -19,13 +19,9 @@ public int[] sortArray(int[] nums) {
     }
     return nums;
 }
-    
-每轮待排序数组是[0...i]。其中第一轮是[0...n-1]，最后一轮是[0...1]，即for(int i = nums.length - 1; i >= 1; i--)
-每轮比较j和j+1，则j的范围是[0...i-1],即 for(int j = 0; j < i; j++)
-    
-    
-每轮待排序数组是[0...n-1], ..., [0...1]。
-每轮比较j和j+1，则j的范围是[0...n-2], ..., [0]。
+
+比较j和j+1
+则j的范围是[0...n-2], ..., [0]。
 而j<i, 那么i的范围[n-1...1] 自减。
 ```
 ```java
