--- a/docs/基础/排序/05_归并.md
+++ b/docs/基础/排序/05_归并.md
@@ -12,7 +12,49 @@
 [5,1] [1] [2,0] [0]
 [5] [1] [1] [2] [0] [0]
 ```
-🚀额外数组公用
+🚀额外数组每次分配
+
+```java
+class Solution {
+    public int[] sortArray(int[] nums) {
+        mergeSort(nums, 0, nums.length - 1);
+        return nums;
+    }
+
+    public void mergeSort(int[] nums, int i, int j) {
+        if (i == j) {   // 当子数组长度为 1 时终止递归
+            return;
+        }
+        int m = i + j >>> 1;
+        mergeSort(nums, i, m);
+        mergeSort(nums, m + 1, j);
+        // 再从底向上合并
+        merge(nums, i, m, j);
+    }
+
+    public void merge(int[] nums, int l, int m, int r) {
+        int[] t = new int[r - l + 1];
+        int p1 = l, p2 = m+1;
+        int k = 0;
+        while (p1 <= m && p2 <= r) {
+            if (nums[p1] < nums[p2]) {
+                t[k++] = nums[p1++];
+            } else {
+                t[k++] = nums[p2++];
+            }
+        }
+        if (p1 <= m) {
+            System.arraycopy(nums, p1, t, k, m - p1 + 1);
+        } else {
+            System.arraycopy(nums, p2, t, k, r - p2 + 1);
+        }
+        System.arraycopy(t, 0, nums, l, r - l + 1);
+    }
+}
+```
+
+
+额外数组公用
 
 ```java
 class Solution {
@@ -27,83 +69,33 @@ class Solution {
             return;
         }
         int m = i + j >>> 1;
-        // 一直递归到单个
         mergeSort(nums, i, m, t);
         mergeSort(nums, m + 1, j, t);
         // 再从底向上合并
-        merge(nums, i, m, m + 1, j, t);
-        System.arraycopy(t, i, nums, i, j - i + 1);
+        merge(nums, i, m, j, t);
     }
 
-    public void merge(int[] nums, int mi, int mj, int ni, int nj, int[] t) {
-        int k = mi;
-        while (mi <= mj && ni <= nj) {
-            if (nums[mi] < nums[ni]) {
-                t[k] = nums[mi];
-                mi++;
+    public void merge(int[] nums, int l, int m, int r, int[] t) {
+        int p1 = l, p2 = m+1;
+        int k = p1;
+        while (p1 <= m && p2 <= r) {
+            if (nums[p1] < nums[p2]) {
+                t[k++] = nums[p1++];
             } else {
-                t[k] = nums[ni];
-                ni++;
+                t[k++] = nums[p2++];
             }
-            k++;
         }
-        if (mi <= mj) {
-            System.arraycopy(nums, mi, t, k, mj - mi + 1);
+        if (p1 <= m) {
+            System.arraycopy(nums, p1, t, k, m - p1 + 1);
         } else {
-            System.arraycopy(nums, ni, t, k, nj - ni + 1);
+            System.arraycopy(nums, p2, t, k, r - p2 + 1);
         }
+        System.arraycopy(t, l, nums, l, r - l + 1);
     }
 }
 ```
 
-额外数组每次分配
 
-```java
-public int[] sortArray(int[] nums) {
-    mergeSort(nums, 0, nums.length - 1);
-    return nums;
-}
-
-/* 合并左子数组和右子数组 */
-void merge(int[] nums, int left, int mid, int right) {
-    // 左子数组区间为 [left, mid], 右子数组区间为 [mid+1, right]
-    // 创建一个临时数组 tmp ，用于存放合并后的结果
-    int[] tmp = new int[right - left + 1];
-    // 初始化左子数组和右子数组的起始索引
-    int i = left, j = mid + 1, k = 0;
-    // 当左右子数组都还有元素时，进行比较并将较小的元素复制到临时数组中
-    while (i <= mid && j <= right) {
-        if (nums[i] <= nums[j])
-            tmp[k++] = nums[i++];
-        else
-            tmp[k++] = nums[j++];
-    }
-    // 将左子数组和右子数组的剩余元素复制到临时数组中
-    while (i <= mid) {
-        tmp[k++] = nums[i++];
-    }
-    while (j <= right) {
-        tmp[k++] = nums[j++];
-    }
-    // 将临时数组 tmp 中的元素复制回原数组 nums 的对应区间
-    for (k = 0; k < tmp.length; k++) {
-        nums[left + k] = tmp[k];
-    }
-}
-
-/* 归并排序 */
-void mergeSort(int[] nums, int left, int right) {
-    // 终止条件
-    if (left >= right)
-        return; // 当子数组长度为 1 时终止递归
-    // 划分阶段
-    int mid = left + (right - left) / 2; // 计算中点
-    mergeSort(nums, left, mid); // 递归左子数组
-    mergeSort(nums, mid + 1, right); // 递归右子数组
-    // 合并阶段
-    merge(nums, left, mid, right);
-}
-```
 
 
 
@@ -229,6 +221,24 @@ class Solution {
 
 ## 算法特性
 
-- **时间复杂度为 $O(n \log n)$、非自适应排序**：划分产生高度为 $\log n$ 的递归树，每层合并的总操作数量为 $n$ ，因此总体时间复杂度为 $O(n \log n)$ 。
-- **空间复杂度为 $O(n)$、非原地排序**：递归深度为 $\log n$ ，使用 $O(\log n)$ 大小的栈帧空间。合并操作需要借助辅助数组实现，使用 $O(n)$ 大小的额外空间。
-- **稳定排序**：在合并过程中，相等元素的次序保持不变。
+**时间复杂度为 $O(n \log n)$、非自适应排序**：
+
+​	划分产生高度为 $\log n$ 的递归树，每层合并的总操作数量为 $n$ ，因此总体时间复杂度为 $O(n \log n)$ 
+
+​	由主定理计算也可得到 T(n) = 2T(n/2) + O(n) →   $O(n \log n)$
+
+**空间复杂度为 $O(n)$、非原地排序**：
+
+​	递归深度为 $\log n$ ，使用 $O(\log n)$ 大小的栈帧空间。
+
+​	合并操作需要借助辅助数组实现，使用 $O(n)$ 大小的额外空间。
+
+**稳定排序**：在合并过程中，相等元素的次序保持不变。
+
+## 题
+
+[计算数组的小和.md](..\..\题\笔试\计算数组的小和.md)  当p1的数<=p2的时，p2及其后有几个 `res += (r - p2 + 1) * nums[p1]`
+
+ [LCR 170. 交易逆序对的总数.md](..\..\题\leetcode\LCR 170. 交易逆序对的总数.md)  
+
+[493. 翻转对.md](..\..\题\leetcode\493. 翻转对.md) 
