--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -19,7 +19,7 @@ private void swap(int[] nums, int i, int j){
 
 ​	（1）两个for循环，内循环是比较。
 
-​	（2）swap（j,j + 1），则j是[0, n-2], j<i，则 i从n-1开始，到1结束。
+​	（2）swap（j,j + 1），则j是[0，n-2]...[0, 0]，j<i，则 i从n-1开始，到1结束。
 
 ​	（3）优化：每轮记住最后一次交换的位置j为x，下一轮i=x。每轮结束[0, x]未排序、[x+1, n-1]已排序。
 
