--- a/docs/基础/数/排列组合.md
+++ b/docs/基础/数/排列组合.md
@@ -20,8 +20,6 @@
 
 组合: sort后放入更大，是包含了vis `1-2-3` 和 排列的重复解 `3-2-1`
 
-![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704323.png)
-
 组合总和
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704921.png)
@@ -75,25 +73,26 @@ class Solution {
 
 ### 全排列：无重复
 
+[[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
+
 ```java
 // leetcode 46
 class Solution {
-    int[] nums;
-    List<Integer> stack = new ArrayList<>();	// 保存每条从根到叶子的链路
     List<List<Integer>> res = new ArrayList<>();	// 所有的链路
+    List<Integer> stack = new ArrayList<>();	// 保存每条从根到叶子的链路
     boolean[] vis;	// 剪枝：已遍历的节点
-
+    int[] nums;
+    
     public List<List<Integer>> permute(int[] nums) {
-        this.vis = new boolean[nums.length];
         this.nums = nums;
+        this.vis = new boolean[nums.length];
         dfs();
         return res;
     }
 
     public void dfs() {
         if (stack.size() == nums.length) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
-            res.add(new ArrayList<>(stack));
+            res.add(new ArrayList<>(stack));	// 注意添加子列表时，直接引用对象会被修改，要clone新对象。
             return;
         }
 
@@ -101,17 +100,14 @@ class Solution {
             if (vis[i]) {
                 continue;
             }
-            // 正向操作：放入、标记已遍历
-            stack.add(nums[i]);
+            stack.add(nums[i]);	// 正向操作：放入、标记已遍历
             vis[i] = true;
-            dfs();
-            // 反向操作：拿出、取消标记
-            vis[i] = false;
+            dfs();				// dfs
+            vis[i] = false;		// 反向操作：拿出、取消标记
             stack.remove(stack.size() - 1);
         }
     }
 }
-// [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
 ```
 
 ### 全排列：有重复
@@ -127,10 +123,10 @@ class Solution {
 ```java
 // 47. 全排列 II
 class Solution {
-    int[] nums;
-    boolean[] vis;
     List<List<Integer>> res = new ArrayList<>();
     List<Integer> stack = new ArrayList<>();
+    int[] nums;
+    boolean[] vis;
 
     public List<List<Integer>> permuteUnique(int[] nums) {
         this.nums = nums;
@@ -224,20 +220,21 @@ class Solution {
 
 > 方案一：
 
- i=start，start = i
+sort +  i=start，start = i
 
 [13.3  子集和问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_backtracking/subset_sum_problem/#3)
 
 ```java
 // 39. 组合总和
 class Solution {
-    int[] nums;
     List<List<Integer>> res = new ArrayList<>();
     List<Integer> stack = new ArrayList<>();
+    int[] nums;
 
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        Arrays.sort(candidates);
         this.nums = candidates;
+        Arrays.sort(this.nums);
+        
         dfs(0, target);
         return res;
     }
@@ -265,10 +262,8 @@ class Solution {
 ```java
 // 39. 组合总和
 class Solution {
-    // 保存每条从根到叶子的链路
-    LinkedList<Integer> stack = new LinkedList<>();
-    // 所有的链路
     List<List<Integer>> result = new ArrayList<>();
+    LinkedList<Integer> stack = new LinkedList<>();
     int[] nums;
     int target;
 
@@ -276,13 +271,13 @@ class Solution {
         this.nums = candidates;
         this.target = target;
         Arrays.sort(this.nums);
+        
         dfs();
         return result;
     }
 
     public void dfs() {
         if (target == 0) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
             result.add(new ArrayList<>(stack));
             return;
         }
@@ -291,9 +286,9 @@ class Solution {
             // 剪枝大小逆序而重复的：2-2-3，3-2-2，2-3-2中的3-2-2，2-3-2
             if (!stack.isEmpty() && nums[i] < stack.peek())
                 continue;
-            // 剪枝剩余target超了的
             if (target - nums[i] < 0)
-                break;
+                break;		// 剪枝剩余target超了的
+            
             stack.push(nums[i]);
             target -= nums[i];
             dfs();
