--- a/docs/基础/递归/递归.md
+++ b/docs/基础/递归/递归.md
@@ -225,5 +225,19 @@ class Solution {
 
 ## 多路递归
 
-for循环展开看
+（1）for循环展开看
+
+（2）A+B
+
+```java
+long res = 0;
+res += mergeSort(nums, i, m);
+res += mergeSort(nums, m + 1, j);
+res += merge(nums, i, m, j);
+return res;
+
+return mergeSort(nums, i, m) + mergeSort(nums, m + 1, j) + merge(nums, i, m, j);
+```
+
+
 
