--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -103,9 +103,13 @@ class Solution {
 
 ### 🚀链表的中间结点
 
-奇数个返回中间。
+因为考虑NULL节点：
 
-偶数个返回中间偏右。不同于int是返回中间偏左。
+​	奇数个返回中间。
+
+​	偶数个返回中间偏右。不同于int是返回中间偏左。
+
+![image-20241010093910279](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410100939317.png)
 
 ```java
 // 876. 链表的中间结点
